--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "main": "public/app/app.module.js",
   "scripts": {
     "start": "http-server . -a localhost -p 8000 -c-1 -o",
-    "test": "karma start karma.conf.js --single-run",
+    "test": "karma start karma.coverage.conf.js --single-run",
     "test-continuous": "karma start karma.conf.js",
-    "test-coverage": "karma start karma.coverage.conf.js --single-run"
+    "test-no-coverage": "karma start karma.conf.js --single-run"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/rubyconvict/cgola#readme",
   "devDependencies": {
     "bower": "1.7.7",
+    "coveralls": "^2.11.8",
     "eslint": "^2.3.0",
     "eslint-config-angular": "^0.5.0",
     "eslint-config-defaults": "^9.0.0",
