--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 node_js:
   - "5.4.1"
 after_success:
-- cat ./coverage/PhantomJS*/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+- cat ./.coverage/PhantomJS*/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 env:
   - NODE_ENV="development"
