--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "http-server": "0.9.0",
     "jasmine-core": "2.4.1",
     "karma": "0.13.21",
+    "karma-chrome-launcher": "^0.2.2",
     "karma-coverage": "^0.5.4",
     "karma-jasmine": "^0.3.7",
     "karma-phantomjs-launcher": "^1.0.0",
